--- a/Código/processamento_dados.ipynb
+++ b/Código/processamento_dados.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "id": "32240f2c-9272-495f-8219-e8c4d7241266",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "id": "938de1d5-67fb-4bc8-8c51-54448fdb4381",
    "metadata": {},
    "outputs": [
@@ -25,19 +25,19 @@
       "🗑️ Colunas removidas de df_colhida: ['Código', 'Sigla']\n",
       "🌎 Filtrados apenas os estados desejados em df_colhida\n",
       "🗑️ Última coluna removida de df_colhida\n",
-      "✔ Área colhida temporária 1999-2020.csv carregado como df_colhida\n",
+      "✔ ../Área de Culturas Temporárias (hectares)/Área colhida temporária 1999-2020.csv carregado como df_colhida\n",
       "🗑️ Colunas removidas de df_plantada: ['Código', 'Sigla']\n",
       "🌎 Filtrados apenas os estados desejados em df_plantada\n",
       "🗑️ Última coluna removida de df_plantada\n",
-      "✔ Área plantada temporária 1999-2020.csv carregado como df_plantada\n",
+      "✔ ../Área de Culturas Temporárias (hectares)/Área plantada temporária 1999-2020.csv carregado como df_plantada\n",
       "🗑️ Colunas removidas de df_pib: ['Código', 'Sigla']\n",
       "🌎 Filtrados apenas os estados desejados em df_pib\n",
       "🗑️ Última coluna removida de df_pib\n",
-      "✔ PIB 1999-2020.csv carregado como df_pib\n",
+      "✔ ../PIB/PIB 1999-2020.csv carregado como df_pib\n",
       "🗑️ Colunas removidas de df_producao: ['Código', 'Sigla']\n",
       "🌎 Filtrados apenas os estados desejados em df_producao\n",
       "🗑️ Última coluna removida de df_producao\n",
-      "✔ Valor de Produção 1999-2020.csv carregado como df_producao\n",
+      "✔ ../Valor da Produção Agrícola (R$)/Valor de Produção 1999-2020.csv carregado como df_producao\n",
       "\n",
       "📂 DataFrames disponíveis: ['df_colhida', 'df_plantada', 'df_pib', 'df_producao']\n"
      ]
@@ -46,11 +46,22 @@
    "source": [
     "\n",
     "# Lista de arquivos e os nomes desejados para os DataFrames\n",
+    "# Os arquivos não estão na mesma pasta, por isso este código não roda.\n",
+    "''' \n",
     "arquivos = {\n",
     "    \"Área colhida temporária 1999-2020.csv\": \"df_colhida\",\n",
     "    \"Área plantada temporária 1999-2020.csv\": \"df_plantada\",\n",
     "    \"PIB 1999-2020.csv\": \"df_pib\",\n",
     "    \"Valor de Produção 1999-2020.csv\": \"df_producao\"\n",
+    "}\n",
+    "'''\n",
+    "import os\n",
+    "\n",
+    "arquivos = {\n",
+    "    os.path.join(\"..\", \"Área de Culturas Temporárias (hectares)\", \"Área colhida temporária 1999-2020.csv\"): \"df_colhida\",\n",
+    "    os.path.join(\"..\", \"Área de Culturas Temporárias (hectares)\", \"Área plantada temporária 1999-2020.csv\"): \"df_plantada\",\n",
+    "    os.path.join(\"..\", \"PIB\", \"PIB 1999-2020.csv\"): \"df_pib\",\n",
+    "    os.path.join(\"..\", \"Valor da Produção Agrícola (R$)\", \"Valor de Produção 1999-2020.csv\"): \"df_producao\"\n",
     "}\n",
     "\n",
     "# Lista dos estados que queremos manter\n",
@@ -2482,7 +2493,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -2496,7 +2507,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
