--- a/Focos de Incendio/firefoci.ipynb
+++ b/Focos de Incendio/firefoci.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "uq2e7CAC3Z-m"
       },
@@ -35,7 +35,6 @@
         "anos = ['1999', '2000', '2001', '2002', '2003', '2004', '2005', '2006', '2007', '2008', '2009', '2010', '2011', '2012', '2013', '2014', '2015', '2016', '2017', '2018', '2019', '2020']\n",
         "estados = ['Acre', 'Amapá', 'Amazonas', 'Maranhão', 'Mato Grosso', 'Pará', 'Roraima', 'Rondônia', 'Tocantins']\n",
         "siglas = ['AC', 'AM', 'AP', 'MA', 'MT', 'PA', 'RO', 'RR', 'TO']\n",
-        "index = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22]\n",
         "meses = ['Janeiro', 'Fevereiro', 'Março', 'Abril', 'Maio', 'Junho', 'Julho', 'Agosto', 'Setembro', 'Outubro', 'Novembro', 'Dezembro']"
       ]
     },
@@ -842,7 +841,7 @@
         "merged_data.to_csv('firefoci.csv', index = False, encoding=\"utf-8\")\n",
         "path = os.getcwd()\n",
         "\n",
-        "print(\"📂 Dataframe salvo em: \", path) \n"
+        "print(\"📂 Dataframe salvo em: \", path)"
       ]
     }
   ],
