Criação do levantamento anual de produção de milho e soja e quantitativo bovino entre Amazônia vs. Pará

--- a/Impacto Econômico do Milho, Soja e Pecuária no Desmatamento no Pará/Métricas/Regressao_Linear_Milho.ipynb
+++ b/Impacto Econômico do Milho, Soja e Pecuária no Desmatamento no Pará/Métricas/Regressao_Linear_Milho.ipynb
@@ -250,12 +250,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = df_dados_geral[[\"area km²\"]]  # Variável independente (área desmatada)\n",
-    "y = df_dados_geral[[\"Produção Milho (R$)/km²\"]] # Variável dependente (quantitativo bovino)"
+    "y = df_dados_geral[[\"Produção Milho (R$)/km²\"]] "
    ]
   },
   {
