--- a/Analise_Economica_Brasil_com_Para/index.ipynb
+++ b/Analise_Economica_Brasil_com_Para/index.ipynb
@@ -5,7 +5,8 @@
    "id": "6281d62b",
    "metadata": {},
    "source": [
-    "Análise da Média Anual da Produção Econômica de Soja, Milho e do Rebanho Bovino no Brasil e no Pará (1999–2020)"
+    "### Análise da Média Anual da Produção Econômica de Soja, Milho e do Rebanho Bovino no Brasil e no Pará (1999–2020)\n",
+    " "
    ]
   },
   {
@@ -18,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "8afda72c",
    "metadata": {},
    "outputs": [],
@@ -31,12 +32,12 @@
    "id": "c516d030",
    "metadata": {},
    "source": [
-    "#### Carregando Dados do Brasil"
+    "##### Carregando Dados do Brasil"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "id": "af3209ad",
    "metadata": {},
    "outputs": [],
@@ -51,12 +52,12 @@
    "id": "1e655607",
    "metadata": {},
    "source": [
-    "#### Carregando Dados do Pará"
+    "##### Carregando Dados do Pará"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "id": "174de291",
    "metadata": {},
    "outputs": [],
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 4,
    "id": "b08e228a",
    "metadata": {},
    "outputs": [
@@ -329,7 +330,7 @@
        "[7 rows x 25 columns]"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 5,
    "id": "aafc5a85",
    "metadata": {},
    "outputs": [],
@@ -350,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 6,
    "id": "cca6b6d9",
    "metadata": {},
    "outputs": [
@@ -441,7 +442,7 @@
        "[1 rows x 25 columns]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 7,
    "id": "49e5f780",
    "metadata": {},
    "outputs": [
@@ -487,7 +488,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 8,
    "id": "576aa6b5",
    "metadata": {},
    "outputs": [
@@ -589,7 +590,7 @@
        "[1 rows x 22 columns]"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 9,
    "id": "5bb473c6",
    "metadata": {},
    "outputs": [],
@@ -634,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 10,
    "id": "76f7b9c8",
    "metadata": {},
    "outputs": [
@@ -661,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "5bcafdd2",
    "metadata": {},
    "outputs": [
@@ -934,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "id": "841dee02",
    "metadata": {},
    "outputs": [],
@@ -944,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
    "id": "be218616",
    "metadata": {},
    "outputs": [
@@ -1038,7 +1039,7 @@
        "[1 rows x 24 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1049,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 14,
    "id": "d6d2e126",
    "metadata": {},
    "outputs": [
@@ -1083,7 +1084,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1094,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 15,
    "id": "3478fce4",
    "metadata": {},
    "outputs": [
@@ -1191,7 +1192,7 @@
        "[1 rows x 21 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1203,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 16,
    "id": "b52f7564",
    "metadata": {},
    "outputs": [],
@@ -1235,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 17,
    "id": "960d81de",
    "metadata": {},
    "outputs": [
@@ -1262,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 18,
    "id": "4441172c",
    "metadata": {},
    "outputs": [
@@ -1515,7 +1516,7 @@
        "[7 rows x 25 columns]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1526,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 45,
    "id": "58e13783",
    "metadata": {},
    "outputs": [],
@@ -1536,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 20,
    "id": "2a0d4088",
    "metadata": {},
    "outputs": [],
@@ -1547,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 21,
    "id": "90a3b1e9",
    "metadata": {},
    "outputs": [
@@ -1579,7 +1580,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1590,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 22,
    "id": "054b0af0",
    "metadata": {},
    "outputs": [
@@ -1843,7 +1844,7 @@
        "[7 rows x 22 columns]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1854,7 +1855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 23,
    "id": "4cb1afa5",
    "metadata": {},
    "outputs": [],
@@ -1887,7 +1888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 51,
    "id": "7bb5c4da",
    "metadata": {},
    "outputs": [
@@ -1895,13 +1896,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A média foi R$ 2.458.861,64\n"
+      "A média foi de 2.458.862 cabeças de gado\n"
      ]
     }
    ],
    "source": [
-    "media_cabecas_pa = soma_anos_cabecas_pa / 22\n",
-    "print(f\"A média foi R$ {media_cabecas_pa.iloc[0]:,.2f}\".replace(\",\", \"X\").replace(\".\", \",\").replace(\"X\", \".\"))"
+    "media_cabecas_pa = (soma_anos_cabecas_pa / 22).round().astype(int)\n",
+    "\n",
+    "print(f\"A média foi de {media_cabecas_pa.iloc[0]:,}\".replace(\",\", \"X\").replace(\".\", \",\").replace(\"X\", \".\") + \" cabeças de gado\")\n"
    ]
   },
   {
@@ -1914,7 +1916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "ed2da13d",
    "metadata": {},
    "outputs": [
@@ -2008,7 +2010,7 @@
        "[1 rows x 25 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2019,7 +2021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "id": "4eaced64",
    "metadata": {},
    "outputs": [],
@@ -2030,7 +2032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 27,
    "id": "bc501725",
    "metadata": {},
    "outputs": [
@@ -2062,7 +2064,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2073,7 +2075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 28,
    "id": "9068a31f",
    "metadata": {},
    "outputs": [
@@ -2084,7 +2086,7 @@
        "Name: 2010, dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2095,7 +2097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 29,
    "id": "04ba1484",
    "metadata": {},
    "outputs": [],
@@ -2106,7 +2108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 30,
    "id": "c892714f",
    "metadata": {},
    "outputs": [
@@ -2138,7 +2140,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2149,7 +2151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 31,
    "id": "0bdb08ef",
    "metadata": {},
    "outputs": [],
@@ -2182,7 +2184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 32,
    "id": "3fdd147d",
    "metadata": {},
    "outputs": [
@@ -2209,7 +2211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 33,
    "id": "cb3fa9ca",
    "metadata": {},
    "outputs": [
@@ -2300,7 +2302,7 @@
        "[1 rows x 25 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2311,7 +2313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 34,
    "id": "3b498c58",
    "metadata": {},
    "outputs": [],
@@ -2322,7 +2324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 35,
    "id": "df55d8b6",
    "metadata": {},
    "outputs": [
@@ -2354,7 +2356,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2365,7 +2367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 36,
    "id": "55562100",
    "metadata": {},
    "outputs": [],
@@ -2398,7 +2400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 55,
    "id": "c49a17f0",
    "metadata": {},
    "outputs": [
@@ -2406,13 +2408,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A média foi R$ 203.146.320,64\n"
+      "A média foi de 203.146.321 cabeças de gado\n"
      ]
     }
    ],
    "source": [
-    "media_cabecas = soma_anos_cabecas / 22\n",
-    "print(f\"A média foi R$ {media_cabecas.iloc[0]:,.2f}\".replace(\",\", \"X\").replace(\".\", \",\").replace(\"X\", \".\"))"
+    "media_cabecas = (soma_anos_cabecas / 22).round().astype(int)\n",
+    "print(f\"A média foi de {media_cabecas.iloc[0]:,}\".replace(\",\", \"X\").replace(\".\", \",\").replace(\"X\", \".\") + \" cabeças de gado\")"
    ]
   },
   {
@@ -2425,7 +2427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "id": "b50beb3d",
    "metadata": {},
    "outputs": [
@@ -2516,7 +2518,7 @@
        "[1 rows x 25 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2527,7 +2529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 39,
    "id": "be1c529b",
    "metadata": {},
    "outputs": [],
@@ -2538,7 +2540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 40,
    "id": "c2563312",
    "metadata": {},
    "outputs": [
@@ -2570,7 +2572,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2581,7 +2583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 41,
    "id": "c354b708",
    "metadata": {},
    "outputs": [],
@@ -2614,7 +2616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 42,
    "id": "f2d9be73",
    "metadata": {},
    "outputs": [
