--- a/Analise_Economica_Brasil_com_Para/index.ipynb
+++ b/Analise_Economica_Brasil_com_Para/index.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "source": [
     "### Análise da Média Anual da Produção Econômica de Soja, Milho e do Rebanho Bovino no Brasil e no Pará (1999–2020)\n",
-    " "
+    "\n",
+    "*Fonte dos dados: IPEA (Instituto de Pesquisa Econômica Aplicada).*"
    ]
   },
   {
